add progress animation for dependency downloads in test suite

--- a/AItoolsFramework/mcp-server/config/container.yaml
+++ b/AItoolsFramework/mcp-server/config/container.yaml
@@ -30,7 +30,7 @@ execution:
 
 # Logging configuration
 logging:
-  level: detailed  # minimal, detailed, verbose
+  level: minimal  # minimal, detailed, verbose
   log_commands: true
   log_output: false
 
